--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -17,11 +17,13 @@
     <div class="panel-heading" style="color:orange">10月活动审核状态</div>
     <div class="panel-body">
       {% if isvalid %}
-      <p style="font-size:20px;color:red">参加积分5折换购的亲，若有疑问，请加入qq群385056821咨询客服。</p>
+      {% if score > 9 %}
+      <p style="font-size:20px;color:red">亲，恭喜您入围10月积分5折换购，请加入优尼世界服务qq群385056821咨询购买及返现流程。</p>
+      {% endif %}
       {% endif %}
       {% if has_order %}
         {% if order_status > 30 %}
-        <p>亲，恭喜您，你的试用申请已<font style="color:red">审核通过</font>啦!</p>
+        <p>亲，你的10月免单申请已<font style="color:red">审核通过</font>啦!</p>
         <p>F码<font style="color:red">{{ vipcode }}</font>已被使用<font style="color:red;font-size:20px">{{ usage_count }}</font>次!</p>
         <p>请扫描下面二维码加入优尼世界服务qq群（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
         <p><a href="#" class="thumbnail"><img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs4KuzkadDvX5Ddk43ziaIpLXQFibJAA7txg7EUD2bJcArRxBic9CR5BfMOjevSLKnemodPbw4evtX1w/0"></a></p>
