--- a/shopmanager/shopapp/examination/templates/examination/exam_admin.html
+++ b/shopmanager/shopapp/examination/templates/examination/exam_admin.html
@@ -4,7 +4,7 @@
     <title>妈妈微信考试喽</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css">
     <script src="/static/jquery/jquery-1.8.13.min.js"></script>
     <script>
     function writeselect(exam_selected,id,paper_id){
@@ -45,7 +45,7 @@
 </tr>
 <tr>
 <td  width="" >
-<form name="form1" style="color:red"> 
+<form name="form1" style="color:red;text-align:left"> 
 <input type="radio" name="1" id="1" onclick="writeselect('A','{{ problem.id }}','{{ paper_id }}');" >A {{ problem.option_a }}<br><br>
 <input type="radio" name="1" id="2" onclick="writeselect('B','{{ problem.id }}','{{ paper_id }}');" >B {{ problem.option_b }}<br><br>
 <input type="radio" name="1" id="3" onclick="writeselect('C','{{ problem.id }}','{{ paper_id }}');" >C {{ problem.option_c }}<br><br>
