--- a/shopmanager/shopapp/examination/templates/examination/exam_finish.html
+++ b/shopmanager/shopapp/examination/templates/examination/exam_finish.html
@@ -4,7 +4,7 @@
     <title>妈妈微信考试喽</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css">
     <script src="/static/jquery/jquery-1.8.13.min.js"></script>
 
     <script>
