--- a/shopmanager/shopapp/examination/templates/examination/exam_index.html
+++ b/shopmanager/shopapp/examination/templates/examination/exam_index.html
@@ -4,7 +4,7 @@
     <title>客服考试系统首页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css">
     <script src="/static/jquery/jquery-1.8.13.min.js"></script>
     <script>
     function exam_index(paper_id,problem_count){
