--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -11,7 +11,7 @@
     <div class="panel-body">
       {% if isvalid %}
       {% if score > 9 %}
-      <p style="font-size:20px;color:red">亲，恭喜您入围10月积分5折换购，请加入优尼世界服务qq群385056821咨询购买及返现流程。</p>
+      <p style="font-size:20px;color:red">亲，恭喜您入围10月积分5折换购，请加入优尼世界服务qq群385056821咨询相关流程。</p>
       {% endif %}
       {% endif %}
       {% if has_order %}
