--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -25,8 +25,7 @@
         {% if order_status == -1 %}
         <p style="color:red">您的试用申请已被系统判定为黑名单，原因可能是您的申请所使用多个手机号均无法接通，如有疑问请联系微信客服。</p>
 	{% else %}
-        <p>亲，感谢您对优尼世界的一直关注，奖励微信粉丝专属优惠券：</p>
-        <p>双11当日，<font style="color:red;">满199减50元</font>优惠券！到天猫【优尼世界旗舰店】拍下，付款<font style="color:red;font-size:20px">立减50元！</font></p>
+        <p>您同时获得: 双11当日，<font style="color:red;">满199减50元</font>优惠券！到天猫【优尼世界旗舰店】拍下，付款<font style="color:red;font-size:20px">立减50元！</font></p>
         <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
         <a href="#" class="thumbnail">
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3mjZZAzCvUDEPccQCMA3cmiag2XQfWhxCdPfpzfdRrBaFJ2FIq0OnH825VMwQkS9oDIW8avzwyoQ/0" alt="...">
