invite result html

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -11,7 +11,7 @@
     <div class="panel-body">
       {% if isvalid %}
       {% if score > 9 %}
-      <p style="font-size:20px;color:red">亲，恭喜您入围10月积分5折换购，请加入优尼世界服务qq群385056821咨询相关流程。</p>
+      <p style="font-size:20px;color:red">亲，恭喜您入围10月积分5折换购，请加入优尼世界服务qq群385056821咨询相关流程。<font style="color:blue">(点赞获10元赢4999元大奖今晚结束，请关注推文或进群咨询客服。)</font></p>
       {% endif %}
       {% endif %}
       {% if has_order %}
