--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -11,8 +11,7 @@
   <div class="panel-heading" style="color:orange">十月活动公告</div>
   <div class="panel-body">
     <p>优尼世界十月免单活动结束了，感谢各位美妈积极参与十月的活动！</p>
-    <p style="color:red">羽绒系列[积分5折换购]火热进行中。详情请咨询客服哦！</p>
-    <p>下期5折换购，投票赢积分<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/survey/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
+    <p style="color:red">全棉抱被、新款3D隔尿单、新款法兰绒抱被[积分5折换购]火热进行中。详情请咨询客服哦！</p>
   </div>
 </div>
 
