--- a/shopmanager/supplychain/wavepick/templates/create_wave.html
+++ b/shopmanager/supplychain/wavepick/templates/create_wave.html
@@ -5,63 +5,43 @@
 {% block container %}
 <div class="container">
 
-<div class="row">
-  <div class="col-md-12" style="text-align:center">
-    <h3>第 5 批</h3>
-  </div>
-</div>
-
 <div class="row" style="margin-top:10px">
   <div class="col-md-12">
     <div class="input-group input-group-lg">
-      <span class="input-group-addon">扫描输入面单号:</span>
-      <input id="id_miandan" type="text" class="form-control">
+      <span class="input-group-addon">选择捡货分组：</span>
+      <select id="group_select" class="select form-control">
+        <option value=""></option>
+        {% for group in groups %}
+        <option value="{{ group.id }}">{{ group.name }}</option>
+        {% endfor %}
+      </select>
     </div>
   </div>
 </div>
 
-
-<div class="row">
-  <div class="col-md-12">
-    <table class="table table-bordered" style="margin-top:30px">
-      <thead><th>序号</th><th>面单号</th></thead>
-      <tbody id="id_tbody">
-      </tbody>
-    </table>
-  </div>
+<div id="wave_content" style="display:none;">
+    
 </div>
-
-
-<div class="row">
-  <div class="col-md-12" style="text-align:center">
-    <a href="/supplychain/wavepick/wave/5/" type="button" class="btn btn-primary">生成订单汇总表</a>
-  </div>
-</div>
-
 </div>
 
 {% endblock %}
 
 {% block tail_script %}
 <script type="text/javascript">
-  $("#id_miandan").keydown(
-    function(event) {  
-      if (event.keyCode == 13) {
-        var val = $("#id_miandan").val();
-        val = $.trim(val);
-        if (val.length > 0) {
-          var children = $("#id_tbody").children();
-          var no = children.length + 1;
-          if (no < 13) { 
-            var child = $("<tr><td>"+no+"</td><td>"+val+"</td></tr>");
-            $("#id_tbody").append(child);
-            $("#id_miandan").val("");
-          } else {
-            alert("不能超过12条！");
-          }
-        }
-      }
-      event.preventDefault();
-    });  
+  
+    $(document).ready(function(){
+        $("#group_select").change(function(){
+            var group_id = $(this).val();
+
+            var callback = function(res){
+                $("#wave_content").html(res).show();
+            };
+    
+            $.post("/supplychain/wavepick/createwave/",
+                {"group_id":group_id},
+                callback)
+    
+        });
+    });
 </script>
 {% endblock %}
