--- a/shopmanager/supplychain/wavepick/templates/wave_detail.html
+++ b/shopmanager/supplychain/wavepick/templates/wave_detail.html
@@ -14,9 +14,35 @@
 <div class="row">
   <div class="col-md-12">
     <table class="table table-bordered" style="margin-top:30px">
-      <thead><th>SKU</th><th>数量</th><th>库位</th></thead>
+      <thead>
+        <th>商品码</th><th style="width:200px;">商品名称</th><th>规格名</th><th>库位</th><th>数量</th>
+	</thead>
       <tbody>
-	<tr><td>211B6383</td><td>5</td><td>A1-5</td></tr>
+                     {% for trade in order_items %}
+				    {% with trade.1.skus|length as sku_len %}
+				    {% if sku_len > 0 %}
+					    {% for sku_id,sku in trade.1.skus.items %}
+					    <tr>
+					    	{% if forloop.first %}
+					    	<td rowspan="{{ sku_len }}">{{ trade.0 }}</td>
+					    	<td rowspan="{{ sku_len }}">{{ trade.1.title }}</td>
+						{% endif %}
+						<td >({{ sku_id }}){{ sku.sku_name }}</td>
+						<td >{{ sku.location }}</td>
+						<td >{{ sku.num }}</td>
+					    </tr>
+					    {% endfor %}
+				    {% else %}
+				    	<tr>
+					    	<td >{{ trade.0 }}</td>
+					    	<td >{{ trade.1.title }}</td>
+    						<td >-</td>
+						<td >{{ trade.1.location }}</td>
+						<td >-</td>
+						</tr>
+				    {% endif %}
+				    {% endwith %}
+			    {% endfor %}
       </tbody>
     </table>
   </div>
