--- a/shopmanager/supplychain/wavepick/templates/allocate_detail.html
+++ b/shopmanager/supplychain/wavepick/templates/allocate_detail.html
@@ -15,7 +15,7 @@
   <div class="col-md-12">
     <div class="input-group input-group-lg">
       <span class="input-group-addon">扫描SKU:</span>
-      <input id="id_sku" type="text" class="form-control" placeholder="2116BG4xxx">
+      <input id="id_sku" type="text" class="form-control">
     </div>
   </div>
 </div>
