--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -8,10 +8,9 @@
 <div class="container-fluid">
 
 <div class="panel panel-default" style="margin-top:5px"> 
-  <div class="panel-heading" style="color:orange">十月活动公告</div>
+  <div class="panel-heading" style="color:orange">十月积分活动公告</div>
   <div class="panel-body">
-    <p>优尼世界十月免单活动结束了，感谢各位美妈积极参与十月的活动！</p>
-    <p style="color:red">全棉抱被、新款3D隔尿单、新款法兰绒抱被[积分5折换购]火热进行中。详情如下：</p>
+    <p style="color:red">全棉抱被、新款3D隔尿单、新款法兰绒抱被<font style="font-size:20px">[积分5折换购]</font>火热进行中。详情如下：</p>
     <div class="row">
       <div class="col-xs-6">
 	<a href="#" class="thumbnail">
@@ -19,9 +18,9 @@
 	</a>
       </div>
       <div class="col-xs-6">
-	<p>品名：全棉卡通抱被</p>
-	<p>天猫现售价：￥69</p>
-	<p>积分换购价：￥34.5</p>
+	<p>全棉卡通抱被</p>
+	<p>天猫价：￥69</p>
+	<p style="color:red">换购价：￥34.5</p>
       </div>
     </div>
     <div class="row">
@@ -31,9 +30,9 @@
 	</a>
       </div>
       <div class="col-xs-6">
-	<p>品名：卡通3D隔尿垫</p>
-	<p>天猫现售价：￥29.9 - ￥59.9</p>
-	<p>积分换购价：￥14.9 - ￥29.9</p>
+	<p>卡通3D隔尿垫</p>
+	<p>天猫价：￥29.9 - ￥59.9</p>
+	<p style="color:red">换购价：￥14.9 - ￥29.9</p>
       </div>
     </div>
     <div class="row">
@@ -43,9 +42,9 @@
 	</a>
       </div>
       <div class="col-xs-6">
-	<p>品名：法兰绒加厚抱被</p>
-	<p>天猫现售价：￥129</p>
-	<p>积分换购价：￥64.5</p>
+	<p>法兰绒加厚抱被</p>
+	<p>天猫价：￥129</p>
+	<p style="color:red">换购价：￥64.5</p>
       </div>
     </div>
   </div>
