--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -30,6 +30,7 @@
         <a href="#" class="thumbnail">
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3mjZZAzCvUDEPccQCMA3cmiag2XQfWhxCdPfpzfdRrBaFJ2FIq0OnH825VMwQkS9oDIW8avzwyoQ/0" alt="...">
         </a>
+	<p>亲也可直接<a href="/weixin/clickscore/7/" style="font-size:20px">点击这里领取>></a> (点击后，请复制到浏览器打开）。</p>
         <p style="color:red">关于优惠券使用事宜，您也可以咨询我们的天猫客服、微信客服。</p>
         {% endif %}
       {% else %}
