--- a/shopmanager/shopapp/weixin/templates/weixin/vipcoupon.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/vipcoupon.html
@@ -31,8 +31,9 @@
 	  <p>1) <font style="color:red;">限量50元</font>优惠券。领券后，双十一当日到天猫【优尼世界旗舰店】拍下任意产品，付款<font style="color:red;font-size:20px">立减50元！</font></p>
 	  <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
 	  <a href="#" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3mjZZAzCvUDEPccQCMA3cmiag2XQfWhxCdPfpzfdRrBaFJ2FIq0OnH825VMwQkS9oDIW8avzwyoQ/0" alt="...">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3mjZZAzCvUDEPccQCMA3cmiag2XQfWhxCdPfpzfdRrBaFJ2FIq0OnH825VMwQkS9oDIW8avzwyoQ/0k" alt="...">
 	  </a>
+	  <p>亲也可直接<a href="/weixin/clickscore/7/" style="font-size:20px">点击这里领取>></a> (点击后，请复制到浏览器打开）。</p>
 	  <p style="color:red">关于优惠券使用事宜，您也可以咨询我们的天猫客服、微信客服。</p>
 	</div>
       </div>
