--- a/shopmanager/shopapp/weixin/templates/weixin/vipcoupon.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/vipcoupon.html
@@ -34,7 +34,7 @@
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3mjZZAzCvUDEPccQCMA3cmiag2XQfWhxCdPfpzfdRrBaFJ2FIq0OnH825VMwQkS9oDIW8avzwyoQ/0k" alt="...">
 	  </a>
 	  <p>亲也可直接<a href="/weixin/clickscore/7/" style="font-size:20px">点击这里领取>></a> (点击后，请复制到浏览器打开）。</p>
-	  <p>2) 小小派睡袋50元优惠券：<a href="http://shop.m.taobao.com/shop/coupon.htm?sellerId=174265168&activityId=153646699">点击领取</a></p>
+	  <p>2) 小小派睡袋50元优惠券：<a href="http://shop.m.taobao.com/shop/coupon.htm?sellerId=174265168&activityId=153646699" style="font-size:20px">点击领取>></a></p>
 	  <p style="color:red">关于优惠券使用事宜，您也可以咨询我们的天猫客服、微信客服。</p>
 	</div>
       </div>
