--- a/shopmanager/shopapp/yunda/templates/yunda/upload_yunda_package.html
+++ b/shopmanager/shopapp/yunda/templates/yunda/upload_yunda_package.html
@@ -7,7 +7,7 @@
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js" type="text/javascript"></script>
     <style type="text/css" title="currentStyle">
     	@import "{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css";
-    	@import "{{ STATIC_URL }}bootstrap/css/bootstrap.min.css";
+    	@import "{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css";
     </style>  
     <style type="text/css">
     body,div{
