--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -8,45 +8,12 @@
 <div class="container-fluid">
 
 <div class="panel panel-default" style="margin-top:5px"> 
-  <div class="panel-heading" style="color:orange">十月积分活动公告</div>
+  <div class="panel-heading" style="color:orange">十一月活动：感恩的思考</div>
   <div class="panel-body">
-    <p style="color:red">全棉抱被、新款3D隔尿单、新款法兰绒抱被<font style="font-size:20px">[积分5折换购]</font>火热进行中。详情如下：</p>
-    <div class="row">
-      <div class="col-xs-6">
-	<a href="#" class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLspHibhxLwLf1pqbpUOeYCjvTYHqrmZqnUGcUYfWVwTe9wwbqgBVXia3WN18cCnufCo6b9boupzdX7Q/0" alt="...">
-	</a>
-      </div>
-      <div class="col-xs-6">
-	<p>全棉卡通抱被</p>
-	<p>天猫价：￥69</p>
-	<p style="color:red">换购价：￥34.5</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-6">
-	<a href="#" class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLspHibhxLwLf1pqbpUOeYCjvgSOcPy5aKC3ftTDZ0icuLnPakINZ2hCQtiauxqgSeqN6YPzsNicuWJMgQ/0" alt="...">
-	</a>
-      </div>
-      <div class="col-xs-6">
-	<p>卡通3D隔尿垫</p>
-	<p>天猫价：￥29.9 - ￥59.9</p>
-	<p style="color:red">换购价：￥14.9 - ￥29.9</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-6">
-	<a href="#" class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLspHibhxLwLf1pqbpUOeYCjvPgegmfot9VtODXfMuKvT0eM4TAKOrjfkQpbnwQmezI8iax8uZpShmuQ/0" alt="...">
-	</a>
-      </div>
-      <div class="col-xs-6">
-	<p>法兰绒加厚抱被</p>
-	<p>天猫价：￥129</p>
-	<p style="color:red">换购价：￥64.5</p>
-      </div>
-    </div>
+    <p style="color:red">十一月，感恩的季节！</p>
+    <p>曾经帮助过我们的人，还记得吗？</p>
+    <p style="color:orange">如果您曾经使用我的F码，我有种冲动，送您一份礼物。</p>
+    <p>感恩他人，就是善待自己。</p>
   </div>
 </div>
 
