--- a/shopmanager/shopapp/weixin/templates/weixin/scoremenu.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/scoremenu.html
@@ -26,7 +26,7 @@
 	<div class="col-xs-12">
 	  <span style="color:orange">推荐好友：<font style="font-size:26px">{{ referal_images|length }}</font>人</span>
 	  {% for image in referal_images %}
-	  <img src="{{ images }}" width="20px" height="20px"/>
+	  <img src="{{ image }}" width="20px" height="20px"/>
 	  {% endfor %}
 	</div>
       </div>
