--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -12,7 +12,7 @@
   <div class="panel-body">
     <p style="color:red">十一月，感恩的季节！</p>
     <p>曾经帮助过我们的人，还记得吗？</p>
-    <p style="color:orange">如果您曾经使用我的F码，我有种冲动，送您一份礼物。</p>
+    <p style="color:orange">不能抑制感恩的心，决定要送您一份礼物，哪怕只是因为您曾经使用我的F码。</p>
     <p>感恩他人，就是善待自己。</p>
   </div>
 </div>
