--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -12,16 +12,22 @@
   <div class="panel-body">
     <p style="color:red">十一月，感恩的季节！</p>
     <p>曾经帮助过我们的人，还记得吗？</p>
-    <p style="color:orange">不能抑制感恩的心，决定要送您一份礼物，哪怕只是因为您曾经使用我的F码。</p>
+    <p style="color:orange">不能抑制感恩的心，决定要送您一份礼物，因为您曾经使用我的F码。</p>
     <p>感恩他人，就是善待自己。</p>
   </div>
 </div>
 
 {% for sample in samples %}
 <div class="panel panel-default" style="margin-top:5px"> 
-  <div class="panel-heading" style="color:red"><b>十月必抢：双11免单 随你挑 免费包邮！</b></div>
+  <div class="panel-heading" style="color:red">双十一来啦，欢迎围观！</div>
   <div class="panel-body">
-    <p style="color:red">美妈们，十月免单活动申请已结束，下期活动你还要吗？</p>
+    <div class="row">
+      <div class="col-xs-12" style="text-align:center">
+	<a href="" class="thumbnail">
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsicb7mTwLoVKwGGhULrMQQvibpeWOIEmD3fLEAiarwiaqAHaibCBS0jlLwMa7Ytw6whcxtXwFPbJH3T4Q/0" alt="...">
+	</a>
+	</div>
+    </div>
     <!--<form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
       <input type="hidden" value="{{ sample.pk }}" name="sample_pk"/>
       <input type="hidden" value="{{ subscribe }}" name="subscribe" id="id_subscribe"/>
