--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -7,7 +7,20 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">11月活动</div>
+    <div class="panel-heading" style="color:orange">十一月 感恩季</div>
+    <div class="panel-body">
+    <p style="color:red">感恩他人，就是善待自己。</p>    
+    <p>亲，有{{ referal_images|length }}位好友在期盼着您的感恩礼包！</p>
+    <p>
+      {% for images in referal_images %}
+      <img src="{{ images }}" width="20px" height="20px"/>
+      {% endfor %}
+    </p>
+    </div>
+  </div>
+
+  <div class="panel panel-default" style="margin-top:5px">
+    <div class="panel-heading" style="color:orange">十一月 感恩季</div>
     <div class="panel-body">
       <p style="color:#029fd6">亲，优尼世界双11大促已经开始预热，快去围观抢购吧！</p>
       {% if has_order %}
@@ -40,7 +53,7 @@
     <div class="panel-body">
       <p>亲们，若您的申请已审核通过，请仔细阅读审核页面的说明，务必在活动结束后<font style="color:red">5个工作日内</font>按照指示操作领取试用产品！不要忘记错过啦！</p>
       <p>为了保证活动的公正性和真实性，我们保留历史中奖名单供查询。</p>
-      <p style="color:orange">十月免单活动，中奖名单: 第<a href="/weixin/finallist/1/1/10/">1</a>,<a href="/weixin/finallist/2/1/10/">2</a>,<a href="/weixin/finallist/3/1/10/">3</a>,<a href="/weixin/finallist/4/1/10/">4</a>,<a href="/weixin/finallist/5/1/10/">5</a>,<a href="/weixin/finallist/6/1/10/">6</a>,<a href="/weixin/finallist/7/1/10/">7</a>,<a href="/weixin/finallist/8/1/10/">8</a>批。</p>
+      <p><a href="/weixin/finallist/1/1/10/">10月中奖名单 >></a></p>
       <p><a href="/weixin/finallist/1/1/9/">9月中奖名单 >></a></p>
       <p><a href="/weixin/finallist/1/1/8/">8月中奖名单 >></a></p>
     </div>
