--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -29,8 +29,18 @@
   </div>
 
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">十一月 感恩季</div>
+    <div class="panel-heading" style="color:orange">我收到的礼包</div>
     <div class="panel-body">
+      <div style="height:166px;padding-top:20px;text-align:center;background-image:url(https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5GuaOn4yVkHfHHicFTe8ib5BaSuiawRibdN9Fia\
+LuNJteKWgCoO5MdAicmCqFRg/0)">
+        <!--                                                                                                                                                                              
+        <p>您的好友 xx 给您发了一个感恩礼包，快打开看看吧！</p>                                                                                                                           
+        <a href="" class="btn btn-danger">打开礼包 >></a>                                                                                                                                 
+        -->
+        <p>亲，好友还未为您发送感恩礼包哦，快提醒下她吧！</p>
+        <a href="" class="btn btn-danger">点击发送提醒 >></a>
+      </div>
+<!--
       <p style="color:#029fd6">亲，优尼世界双11大促已经开始预热，快去围观抢购吧！</p>
       {% if has_order %}
         {% if order_status > 30 %}
@@ -52,7 +62,7 @@
         <p style="color:red">关于优惠券使用事宜，您也可以咨询我们的天猫客服、微信客服。</p>
         {% endif %}
       {% endif %}
-
+-->
     </div>
   </div>
 
