--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -12,8 +12,9 @@
   <div class="panel-body">
     <p style="color:red">十一月，感恩的季节！</p>
     <p>曾经帮助过我们的人，还记得吗？</p>
-    <p style="color:orange">不能抑制感恩的心，决定要送您一份礼物，因为您曾经使用我的F码。</p>
+    <p style="color:orange">不能抑制感恩的心，决定要送您一份礼物，感谢您曾经使用我的F码。</p>
     <p>感恩他人，就是善待自己。</p>
+    <a href="/weixin/inviteresult/">点击发送感恩礼包 >></a>
   </div>
 </div>
 
