fix weixin sales add award

--- a/shopmanager/shopapp/asynctask/templates/asynctask/print/invoice_qiyue_template.html
+++ b/shopmanager/shopapp/asynctask/templates/asynctask/print/invoice_qiyue_template.html
@@ -66,17 +66,12 @@ body {
 	}
 }
 
-h1 {
-  -pdf-outline: true;
-  -pdf-level: 0;
-  -pdf-open: false;
-}
 
 table {
 	background-color: #ffffff;
 	border-collapse: collapse;
-	padding: 0em;
-	margin: 0em;
+	padding: 0px;
+	margin: 0px;
 	width: 100%;
 }
 
